# AdventOfCode2025

./: Cargo.toml
src/Day1/: part1.rs  part2.rs
src/Day2/: part1.rs  part2.rs
src/Day3/: part1.rs  part2.rs
src/Day4/: part1.rs  part2.rs
src/Day5/: part1.rs  part2.rs
src/Day6/: part1.rs  part2.rs
src/Day7/: part1.rs  part2.rs
