[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "d1p1"
path = "src/Day1/part1.rs"

[[bin]]
name = "d1p2"
path = "src/Day1/part2.rs"

[[bin]]
name = "d2p1"
path = "src/Day2/part1.rs"

[[bin]]
name = "d2p2"
path = "src/Day2/part2.rs"

[[bin]]
name = "d3p1"
path = "src/Day3/part1.rs"

[dependencies]
anyhow = "1.0.100"
